k8s/03-frontend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qr-frontend
  namespace: qr-generator
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qr-frontend
  template:
    metadata:
      labels:
        app: qr-frontend
    spec:
      containers:
      - name: web
        image: ${FRONTEND_IMAGE}
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "250m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
